# deathbits

./: README.md  rollup.config.js
.github/workflows/: main.yml
public/: index.html
src/: App.svelte
stats/: Cargo.toml  uint_float.py
stats/benches/: bench.rs
stats/output/: arpfloat::float::Float.txt  deathbits::LogNum<f32>.txt  deathbits::LogNum<f64>.txt  f64.txt  fast_posit::posit::Posit<64, 2, i64>.txt  fast_posit::posit::Posit<64, 20, i64>.txt  num_bigint::biguint::BigUint.txt
stats/src/: lib.rs  main.rs  uint_float.rs
